hands-on-practice/15-helm-kustomize-artifact-repositories/kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: course-web
  namespace: docker-course-packaging
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: course-web
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
